--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 * {
     border: none;
     padding: none;
+    --theme-color:hsla(200, 80, 10, 0.9)
 }
+
+/* #background {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(166.03deg, #526ebd 0%, #0f2458 100%);
+} */
 
 #root {
     z-index: 100;
@@ -13,7 +21,7 @@
 
 #top {
     position: fixed;
-    background: top rgb();
+    background: top calc(var(--theme-color));
     width: 100%;
     height: 50px;
 }
@@ -27,5 +35,9 @@
 }
 
 #firstboard {
-    background: center center;
+    background: center url(./img/);
+    top: 400px;
+    height: 800px;
+    width: 80;
 }
+
