--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     padding: none;
-    --theme-color: hsla(200, 80, 10, 0.9)
+    --theme-color: hsla(200, 80, 10, 0.8)
 }
 
 /* #background {
@@ -21,7 +21,7 @@
 
 #nav {
     position: fixed;
-    background: top calc(var(--theme-color));
+    background-color:calc(var(--theme-color));
     width: 100%;
     height: 50px;
 }
