--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -27,7 +27,7 @@
 }
 
 #icon {
-    background: url();
+    background: url(/img/icon.png);
 }
 
 #container>* {
@@ -39,4 +39,11 @@
     top: 400px;
     height: 800px;
     width: 80;
+}
+
+#webdetail {
+    width: 100%;
+    height: 200px;
+    background-color: calc(var(--theme-color) - hsla(0,20,20,-0.5));
+    border-top: 5px calc(var(--theme-color) - hsla(0,10,10));
 }
